简化工作流 - 移除了有问题的Action 简化脚本 - 移除了复杂的API调用和正则表达式 减少依赖 - 只使用Python标准库 提高稳定性 - 避免外部API调用失败

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-python-dateutil>=2.8.2
+# 基础依赖包
+# 当前版本使用Python标准库，无需额外依赖
+# 如果需要API功能，可以取消注释下面的行
+# requests>=2.31.0
+# beautifulsoup4>=4.12.0
+# python-dateutil>=2.8.2
 lxml>=4.9.0 
