--- a/.github/workflows/dynamic-content.yml
+++ b/.github/workflows/dynamic-content.yml
@@ -10,6 +10,10 @@ on:
       - 'scripts/**'
       - 'data/**'
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   generate-content:
     runs-on: ubuntu-latest
@@ -17,6 +21,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Setup Python
         uses: actions/setup-python@v4
