修复Action不支持push事件

--- a/.github/workflows/simple-update.yml
+++ b/.github/workflows/simple-update.yml
@@ -1,55 +1,2 @@
-name: Simple Profile Update
-
-on:
-  schedule:
-    # 每天凌晨2点运行
-    - cron: '0 2 * * *'
-  workflow_dispatch: # 允许手动触发
-
-permissions:
-  contents: write
-
-jobs:
-  update-readme:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name: Update README timestamp
-        run: |
-          # 获取当前时间
-          TIMESTAMP=$(date '+%Y-%m-%d %H:%M:%S')
-          
-          # 更新英文README
-          if [ -f "README.md" ]; then
-            # 移除旧的更新时间戳
-            sed -i '/Last updated:/d' README.md
-            # 添加新的更新时间戳
-            echo "" >> README.md
-            echo "---" >> README.md
-            echo "" >> README.md
-            echo "*Last updated: $TIMESTAMP*" >> README.md
-          fi
-          
-          # 更新中文README
-          if [ -f "README_CN.md" ]; then
-            # 移除旧的更新时间戳
-            sed -i '/最后更新:/d' README_CN.md
-            # 添加新的更新时间戳
-            echo "" >> README_CN.md
-            echo "---" >> README_CN.md
-            echo "" >> README_CN.md
-            echo "*最后更新: $TIMESTAMP*" >> README_CN.md
-          fi
-          
-      - name: Commit and push changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "🕐 Update README timestamp - $TIMESTAMP"
-          git push 
+# This workflow has been merged into update-profile.yml
+# Please use update-profile.yml instead 
